# vplugin-init

./: Cargo.toml  README.md
.github/workflows/: rust.yml
man/: vplugin-init.1
src/: application.rs  file.rs  main.rs
